Se ordenó un poco más el CSS y se cambió el donaciones.html a sucursales.html, también fue adaptado en el resto de los HTML para que sea adaptable

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -31,7 +31,7 @@
                         <li> <a href="../index.html">Principal</a> </li>
                         <li> <a href="animales.html">Animales</a> </li>
                         <li> <a href="contacto.html">Contacto</a> </li>
-                        <li> <a href="donaciones.html">Sucursales</a> </li>
+                        <li> <a href="sucursales.html">Sucursales</a> </li>
                     </ul>
                 </div>
             </nav>
@@ -63,7 +63,7 @@
                     <li> <a href="../index.html">Principal</a> </li>
                     <li> <a href="animales.html">Animales</a> </li>
                     <li> <a href="contacto.html">Contacto</a> </li>
-                    <li> <a href="donaciones.html">Sucursales</a> </li>
+                    <li> <a href="sucursales.html">Sucursales</a> </li>
                 </ul>
 
             </section>
