--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li> <a href="html/nosotros.html">Nosotros</a> </li>
                         <li> <a href="html/animales.html">Animales</a> </li>
                         <li> <a href="html/contacto.html">Contacto</a> </li>
-                        <li> <a href="html/donaciones.html">Sucursales</a> </li>
+                        <li> <a href="html/sucursales.html">Sucursales</a> </li>
                     </ul>
                 </div>
             </nav>
@@ -63,7 +63,7 @@
                     <li> <a href="html/nosotros.html">Nosotros</a> </li>
                     <li> <a href="html/animales.html">Animales</a> </li>
                     <li> <a href="html/contacto.html">Contacto</a> </li>
-                    <li> <a href="html/donaciones.html">Sucursales</a> </li>
+                    <li> <a href="html/sucursales.html">Sucursales</a> </li>
                 </ul>
 
             </section>
