--- a/html/animales.html
+++ b/html/animales.html
@@ -29,7 +29,7 @@
                     <ul>
                         <li> <a href="../index.html">Principal</a> </li>
                         <li> <a href="contacto.html">Contacto</a> </li>
-                        <li> <a href="donaciones.html">Sucursales</a> </li>
+                        <li> <a href="sucursales.html">Sucursales</a> </li>
                         <li> <a href="nosotros.html">Nosotros</a> </li>
                     </ul>
                 </div>
@@ -61,7 +61,7 @@
                 <ul class="menu">
                     <li> <a href="../index.html">Principal</a> </li>
                     <li> <a href="contacto.html">Contacto</a> </li>
-                    <li> <a href="donaciones.html">Sucursales</a> </li>
+                    <li> <a href="sucursales.html">Sucursales</a> </li>
                     <li> <a href="nosotros.html">Nosotros</a> </li>
                 </ul>
 
