--- a/html/contacto.html
+++ b/html/contacto.html
@@ -30,7 +30,7 @@
                     <ul>
                         <li> <a href="../index.html">Principal</a> </li>
                         <li> <a href="animales.html">Animales</a> </li>
-                        <li> <a href="donaciones.html">Sucursales</a> </li>
+                        <li> <a href="sucursales.html">Sucursales</a> </li>
                         <li> <a href="nosotros.html">Nosotros</a> </li>
                     </ul>
                 </div>
@@ -62,7 +62,7 @@
                 <ul class="menu">
                     <li> <a href="../index.html">Principal</a> </li>
                     <li> <a href="animales.html">Animales</a> </li>
-                    <li> <a href="donaciones.html">Sucursales</a> </li>
+                    <li> <a href="sucursales.html">Sucursales</a> </li>
                     <li> <a href="nosotros.html">Nosotros</a> </li>
                 </ul>
 
