Implemento un header de bootstrap completamente navegable en todos los html.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <main>
     <!-- Menú para desktop -->
     <header>
-        <div class="navegaciondesktop">
+
+        <nav class="navbar navbar-expand-lg">
 
             <div data-aos="fade-right">
 
@@ -26,18 +27,43 @@
 
             </div>
 
-            <nav>
-                <div data-aos="fade-left">
-                    <ul>
-                        <li> <a href="html/nosotros.html">Nosotros</a> </li>
-                        <li> <a href="html/animales.html">Animales</a> </li>
-                        <li> <a href="html/contacto.html">Contacto</a> </li>
-                        <li> <a href="html/sucursales.html">Sucursales</a> </li>
-                    </ul>
-                </div>
-            </nav>
+            <div data-aos="fade-left">
 
-        </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
+
+                    <ul class="navbar-nav">
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="html/nosotros.html">Nosotros</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="html/animales.html">Animales</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="html/contacto.html">Contacto</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="html/sucursales.html">Sucursales</a>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </nav>
 
     <!-- Menú hamburger para mobile -->
         <div class="hambugermobile">
