--- a/html/contacto.html
+++ b/html/contacto.html
@@ -14,9 +14,11 @@
 
 
 <main>
+<!-- Menú de Desktop -->
 
     <header>
-        <div class="navegaciondesktop">
+
+        <nav class="navbar navbar-expand-lg">
 
             <div data-aos="fade-right">
 
@@ -26,18 +28,43 @@
 
             </div>
 
-            <nav>
-                <div data-aos="fade-left">
-                    <ul>
-                        <li> <a href="../index.html">Principal</a> </li>
-                        <li> <a href="animales.html">Animales</a> </li>
-                        <li> <a href="sucursales.html">Sucursales</a> </li>
-                        <li> <a href="nosotros.html">Nosotros</a> </li>
-                    </ul>
-                </div>
-            </nav>
+            <div data-aos="fade-left">
 
-        </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
+
+                    <ul class="navbar-nav">
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="animales.html">Animales</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="../index.html">Principal</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="sucursales.html">Sucursales</a>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </nav>
 
     <!-- Menú hamburger para mobile -->
         <div class="hambugermobile">
