--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -14,7 +14,8 @@
 <main>
 
     <header>
-        <div class="navegaciondesktop">
+
+        <nav class="navbar navbar-expand-lg">
 
             <div data-aos="fade-right">
 
@@ -24,20 +25,46 @@
 
             </div>
 
-            <nav>
-                <div data-aos="fade-left">
-                    <ul>
-                        <li> <a href="../index.html">Principal</a> </li>
-                        <li> <a href="animales.html">Animales</a> </li>
-                        <li> <a href="contacto.html">Contacto</a> </li>
-                        <li> <a href="nosotros.html">Nosotros</a> </li>
-                    </ul>
-                </div>
-            </nav>
+            <div data-aos="fade-left">
 
-        </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
+
+                    <ul class="navbar-nav">
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="animales.html">Animales</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+
+                        </li>
+
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="../index.html">Principal</a>
+
+                        </li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </nav>
 
     <!-- Menú hamburger para mobile -->
+
         <div class="hambugermobile">
 
             <section class="top-nav">
