--- a/html/animales.html
+++ b/html/animales.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="description" content="Adoptamos y cuidamos gatos enfermos para darles la segunda oportunidad y vida que merecen">
+    <meta name="keywords" content="Gatos, Refugio de animales, Albergue animal">
+    <title>Rona - Listado de animales que están y fueron cuidados</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
