Agrego las keywords faltantes y agrego un extend simple.

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta name="description" content="Adoptamos y cuidamos gatos enfermos para darles la segunda oportunidad y vida que merecen">
-    <meta name="keywords" content="Gatos, Refugio de animales, Albergue animal">
+    <meta name="keywords" content="Gatos, Refugio de animales, Albergue animal, Cuidado de animales, Mascotas">
     <title>Rona - Quienes somos y por qué cuidamos a los animales con enfermedades</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
