--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="description" content="Adoptamos y cuidamos gatos enfermos para darles la segunda oportunidad y vida que merecen">
-    <meta name="keywords" content="Gatos, Refugio de animales, Albergue animal">
+    <meta name="keywords" content="Gatos, Refugio de animales, Albergue animal, Cuidado de animales, Mascotas">
     <title>Rona - Tenemos sucursales en BS AS, Córdoba y Mendoza</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
