Agrego contenido de texto real a la página web

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -108,9 +108,9 @@
 
             <h2>¿Quienes somos?</h2>
 
-            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Neque ipsa eveniet modi possimus cumque doloremque quasi saepe quia similique autem sit aut nihil adipisci eos,
-                eaque perferendis quos architecto facere?</h3>
+            <h3>Somos una pareja de universitarios que vieron el gran alza de gatos los cuales son abandonados por temas de salud del animal.
+                Adoptamos y los cuidamos para darles la segunda oportunidad que sus anteriores dueños no quisieron darles.
+            </h3>
 
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 
