--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="description" content="Adoptamos y cuidamos gatos enfermos para darles la segunda oportunidad y vida que merecen">
     <meta name="keywords" content="Gatos, Refugio de animales, Albergue animal, Cuidado de animales, Mascotas">
-    <title>Rona - les damos una segunda oportunidad a los gatos enfermos</title>
+    <title>Rona - Damos segundas oportunidades</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -107,9 +107,7 @@
         <div class="presentacion">
 
             <h2>¿Qué hacemos?</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Sint itaque iste accusantium voluptatum ad magni odit perferendis assumenda doloribus corrupti.
-                Tenetur cumque nemo inventore iusto praesentium maiores voluptatum, obcaecati libero!</h3>
+            <h3>Somos dos jovenes que adoptamos y cuidamos a animales abandonados para darles la vida que se merecen.</h3>
 
         </div>
 
@@ -129,8 +127,8 @@
                 <div class="textoder">
 
                     <h3>LENA</h3>
-                    <p><strong> Resumen de su historia </strong> : Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia inventore eligendi ab sint fugit illum officiis praesentium reprehenderit, exercitationem ea commodi eos qui voluptates ut consequatur deserunt doloremque, debitis ratione optio, veniam nam. Ad voluptatum nisi rerum.
-                    </p>
+                    <p><strong> Resumen de su historia </strong> : Lena fue una gata la cual empezó a ser rechazada por la madre debido a la leucemia que poseía apenas nacer.
+                    Le dimos los cuidados pertinentes, hoy en día es una gata la cual, si bien aun le falta algo más de peso, está viviendo una buena vida.</p>
                 
                 </div>
             
