Termino con los cambios del index y nosotros, arreglo un poco el animales.html haciendo mas grandes los textos para desktop, agrego más fotos para el carrusel y agrego links a las redes sociales

--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -152,17 +152,17 @@
             <h1>Ro <span> Na </span></h1>
             <div class="redes">
 
-                <a href=""><i class="fa-brands fa-instagram fa-3x"></i></a>
-                <a href=""><i class="fa-brands fa-facebook fa-3x"></i></a>
-                <a href=""><i class="fa-brands fa-whatsapp fa-3x"></i></a>
+                <a href="https://www.instagram.com" target=”_blank”><i class="fa-brands fa-instagram fa-3x"></i></a>
+                <a href="https://www.facebook.com" target=”_blank”><i class="fa-brands fa-facebook fa-3x"></i></a>
+                <a href="https://web.whatsapp.com" target=”_blank”><i class="fa-brands fa-whatsapp fa-3x"></i></a>
 
             </div>
 
             <div class="redesmobile">
 
-                <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
-                <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
-                <a href=""><i class="fa-brands fa-whatsapp fa-2x"></i></a>
+                <a href="https://www.instagram.com" target=”_blank”><i class="fa-brands fa-instagram fa-2x"></i></a>
+                <a href="https://www.facebook.com" target=”_blank”><i class="fa-brands fa-facebook fa-2x"></i></a>
+                <a href="https://web.whatsapp.com" target=”_blank”><i class="fa-brands fa-whatsapp fa-2x"></i></a>
 
             </div>
 
