--- a/html/contacto.html
+++ b/html/contacto.html
@@ -144,17 +144,17 @@
 
             <div class="redes">
 
-                <a href=""><i class="fa-brands fa-instagram fa-3x"></i></a>
-                <a href=""><i class="fa-brands fa-facebook fa-3x"></i></a>
-                <a href=""><i class="fa-brands fa-whatsapp fa-3x"></i></a>
-    
+                <a href="https://www.instagram.com" target=”_blank”><i class="fa-brands fa-instagram fa-3x"></i></a>
+                <a href="https://www.facebook.com" target=”_blank”><i class="fa-brands fa-facebook fa-3x"></i></a>
+                <a href="https://web.whatsapp.com" target=”_blank”><i class="fa-brands fa-whatsapp fa-3x"></i></a>
+
             </div>
 
             <div class="redesmobile">
 
-                <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
-                <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
-                <a href=""><i class="fa-brands fa-whatsapp fa-2x"></i></a>
+                <a href="https://www.instagram.com" target=”_blank”><i class="fa-brands fa-instagram fa-2x"></i></a>
+                <a href="https://www.facebook.com" target=”_blank”><i class="fa-brands fa-facebook fa-2x"></i></a>
+                <a href="https://web.whatsapp.com" target=”_blank”><i class="fa-brands fa-whatsapp fa-2x"></i></a>
 
             </div>
 
