--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -158,7 +158,7 @@
                 <a href="https://www.facebook.com" target=”_blank”><i class="fa-brands fa-facebook fa-2x"></i></a>
                 <a href="https://web.whatsapp.com" target=”_blank”><i class="fa-brands fa-whatsapp fa-2x"></i></a>
 
-            </div>
+            </div>RefugioAnimal
 
             <p>Marca no registrada ®</p>
 
@@ -170,7 +170,7 @@
 
                 <strong>Sucursal CENTRAL en Buenos Aires</strong> <br>
                 <strong>Teléfono: +11 13425362</strong>
-                <p>E-Mail: RonaLaPlata@cuidadogatos.com.ar</p>
+                <p>E-Mail: RonaLaPlata@RefugioAnimal.com.ar</p>
                 <strong> La Plata - Calle 29 al 254 </strong>
 
             </div>
@@ -179,7 +179,7 @@
 
                 <strong>Sucursal en Córdoba</strong> <br>
                 <strong>Teléfono: +11 12341234</strong>
-                <p>E-Mail: RonaCordoba@cuidadogatos.com.ar</p>
+                <p>E-Mail: RonaCordoba@RefugioAnimal.com.ar</p>
                 <strong> Villa Carlos Paz - La Paz al 827 </strong>
 
             </div>
@@ -188,7 +188,7 @@
 
                 <strong>Sucursal en Mendoza</strong> <br>
                 <strong>Teléfono: +11 55542745</strong>
-                <p>E-Mail: RonaMendoza@cuidadogatos.com.ar</p>
+                <p>E-Mail: RonaMendoza@RefugioAnimal.com.ar</p>
                 <strong> Mendoza Capital - Alpatacal al 675 </strong>
 
             </div>
