Agrego un nuevo formulario y optimizo el código de contacto.html

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -108,7 +108,7 @@
 
             <h2>¿Quienes somos?</h2>
 
-            <h3>Somos una pareja de universitarios que vieron el gran alza de gatos los cuales son abandonados por temas de salud del animal.
+            <h3>Somos una pareja de universitarios que vieron el gran alza de mascotas los cuales son abandonados por temas de salud del animal.
                 Adoptamos y los cuidamos para darles la segunda oportunidad que sus anteriores dueños no quisieron darles.
             </h3>
         </div>
