--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="presentacion">
 
             <h2>¿Qué hacemos?</h2>
-            <h3>Adoptamos y cuidamos animales que fueron abandonados por sus dueños
+            <h3>Adoptamos y cuidamos animales que fueron abandonados
             y les damos cuidados para que tengan una mejor vida.</h3>
             
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
