Pequeños cambios al botón de enviar

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -81,7 +81,7 @@
                             <textarea name="message" id="message"  class="form-control" rows="4" placeholder="Escriba aquí..."  required="required"></textarea>
                         </div>
                         <button type="submit" value="Enviar" class="btn btn-primary">
-                            <span>Enviar</span>
+                            <span><strong>Enviar</strong></span>
                         </button>
                     </form>
                 </div>
