Ajustes al carrusel, ajustes para hacer la navegación más cómoda y leve optimización de código en los headers

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg">
             <div data-aos="fade-right">
                 <img src="../img/logo.png" alt="Logo">
-                <h1>Ro <span> Na </span></h1>
+                <a href="../index.html"><h1>Ro <span> Na </span></h1></a>
             </div>
             <div data-aos="fade-left">
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="animales.html">Animales</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Principal</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="sucursales.html">Sucursales</a>
@@ -55,10 +55,10 @@
                     <div class='menu-button'></div>
                 </label>
                 <ul class="menu">
-                    <li> <a href="../index.html">Principal</a> </li>
-                    <li> <a href="animales.html">Animales</a> </li>
-                    <li> <a href="sucursales.html">Sucursales</a> </li>
                     <li> <a href="nosotros.html">Nosotros</a> </li>
+                    <li> <a href="animales.html">Animales</a> </li>
+                    <li> <a href="contacto.html">Contacto</a> </li>
+                    <li> <a href="sucursales.html">Sucursales</a> </li>
                 </ul>
             </section>
         </div>
