--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -17,53 +17,29 @@
 <main>
 
     <header>
-
         <nav class="navbar navbar-expand-lg">
-
             <div data-aos="fade-right">
-
                 <img src="../img/logo.png" alt="Logo">
-
-                <h1>Ro <span> Na </span></h1>
-
+                <a href="../index.html"><h1>Ro <span> Na </span></h1></a>
             </div>
-
             <div data-aos="fade-left">
-
                 <div class="collapse navbar-collapse" id="navbarNav">
-
                     <ul class="navbar-nav">
-
                         <li class="nav-item">
-
                             <a class="nav-link" href="nosotros.html">Nosotros</a>
-
                         </li>
-
                         <li class="nav-item">
-
                             <a class="nav-link" href="animales.html">Animales</a>
-
                         </li>
-
                         <li class="nav-item">
-
                             <a class="nav-link" href="contacto.html">Contacto</a>
-
                         </li>
-
                         <li class="nav-item">
-
-                            <a class="nav-link" href="../index.html">Principal</a>
-
+                            <a class="nav-link" href="sucursales.html">Sucursales</a>
                         </li>
-
                     </ul>
-
                 </div>
-
             </div>
-
         </nav>
 
     <!-- Menú hamburger para mobile -->
@@ -76,7 +52,7 @@
 
                     <img src="../img/logo.png" alt="Logo">
         
-                    <h1>Ro <span> Na </span></h1>
+                    <a href="../index.html"><h1>Ro <span> Na </span></h1></a>
         
                 </div>
 
@@ -89,10 +65,10 @@
                 </label>
 
                 <ul class="menu">
-                    <li> <a href="../index.html">Principal</a> </li>
+                    <li> <a href="nosotros.html">Nosotros</a> </li>
                     <li> <a href="animales.html">Animales</a> </li>
                     <li> <a href="contacto.html">Contacto</a> </li>
-                    <li> <a href="nosotros.html">Nosotros</a> </li>
+                    <li> <a href="sucursales.html">Sucursales</a> </li>
                 </ul>
 
             </section>
