--- a/index.html
+++ b/index.html
@@ -19,55 +19,30 @@
 <main>
     <!-- Menú para desktop -->
     <header>
-
         <nav class="navbar navbar-expand-lg">
-
             <div data-aos="fade-right">
-
                 <img src="img/logo.png" alt="Logo">
-
-                <h1>Ro <span> Na </span></h1>
-
+                <a href="#"><h1>Ro <span> Na </span></h1></a>
             </div>
-
             <div data-aos="fade-left">
-
                 <div class="collapse navbar-collapse" id="navbarNav">
-
                     <ul class="navbar-nav">
-
                         <li class="nav-item">
-
                             <a class="nav-link" href="html/nosotros.html">Nosotros</a>
-
                         </li>
-
                         <li class="nav-item">
-
                             <a class="nav-link" href="html/animales.html">Animales</a>
-
                         </li>
-
                         <li class="nav-item">
-
                             <a class="nav-link" href="html/contacto.html">Contacto</a>
-
                         </li>
-
                         <li class="nav-item">
-
                             <a class="nav-link" href="html/sucursales.html">Sucursales</a>
-
                         </li>
-
                     </ul>
-
                 </div>
-
             </div>
-
         </nav>
-
     <!-- Menú hamburger para mobile -->
         <div class="hambugermobile">
 
@@ -77,7 +52,7 @@
 
                     <img src="img/logo.png" alt="Logo">
         
-                    <h1>Ro <span> Na </span></h1>
+                    <a href="#"><h1>Ro <span> Na </span></h1></a>
         
                 </div>
 
@@ -130,8 +105,8 @@
 
                         <div class="carousel-caption d-block">
 
-                            <h5>ANNIE CON LENA</h5>
-                            <p>Annie, nuestra gata terapeuta, con Lena, su 'casi hija'</p>
+                            <h5>'ANNIE' CON 'LENA'</h5>
+                            <p>Annie, nuestra gata terapeuta, con Lena, su casi hija</p>
 
                         </div>
 
@@ -144,7 +119,7 @@
 
                         <div class="carousel-caption d-block">
 
-                            <h5>KILLI DE CHIQUITA</h5>
+                            <h5>'KILLI' DE CHIQUITA</h5>
                             <p>La gata que fue abandonada por su madre siendo cuidada por nosotros</p>
 
                         </div>
@@ -157,7 +132,7 @@
 
                         <div class="carousel-caption d-block">
 
-                            <h5>GATE MEJOR DE SALUD</h5>
+                            <h5>'GATE' MEJOR DE SALUD</h5>
                             <p> El gato con leucemia más reciente de la familia </p>
 
                         </div>
