--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -90,9 +90,7 @@
     <body>
 
         <div class="nosotros">
-
             <h2>¿Quienes somos?</h2>
-
             <h3>Somos una pareja de universitarios que vieron el gran alza de mascotas los cuales son abandonados por temas de salud del animal.
                 Adoptamos y los cuidamos para darles la segunda oportunidad que sus anteriores dueños no quisieron darles.
             </h3>
@@ -143,7 +141,7 @@
                 <a href="https://www.facebook.com" target=”_blank”><i class="fa-brands fa-facebook fa-2x"></i></a>
                 <a href="https://web.whatsapp.com" target=”_blank”><i class="fa-brands fa-whatsapp fa-2x"></i></a>
 
-            </div>RefugioAnimal
+            </div>
 
             <p>Marca no registrada ®</p>
 
