Ajustes finales al responsive del form

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -48,7 +48,7 @@
             <section class="top-nav">
                 <div data-aos="fade-right">
                     <img src="../img/logo.png" alt="Logo">
-                    <h1>Ro <span> Na </span></h1>
+                    <a href="../index.html"><h1>Ro <span> Na </span></h1></a>
                 </div>
                 <input id="menu-toggle" type="checkbox" />
                 <label class='menu-button-container' for="menu-toggle">
@@ -67,24 +67,23 @@
     <body>
         <div class="container">
             <div class="row">
-                    <form role="form">
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="username" id="username"  required="required" placeholder="Nombre completo...">
-                        </div>
-                        <div class="form-group">
-                            <input type="email" class="form-control" name="usermail" id="usermail" placeholder="E-Mail..." required="required">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="subject" id="subject"  required="required" placeholder="Asunto...">
-                        </div>
-                        <div class="form-group">
-                            <textarea name="message" id="message"  class="form-control" rows="4" placeholder="Escriba aquí..."  required="required"></textarea>
-                        </div>
-                        <button type="submit" value="Enviar" class="btn btn-primary">
-                            <span><strong>Enviar</strong></span>
-                        </button>
-                    </form>
-                </div>
+                <form role="form">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="username" id="username"  required="required" placeholder="Nombre completo...">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" name="usermail" id="usermail" placeholder="E-Mail..." required="required">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="subject" id="subject"  required="required" placeholder="Asunto...">
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" id="message"  class="form-control" rows="4" placeholder="Escriba aquí..."  required="required"></textarea>
+                    </div>
+                    <button type="submit" value="Enviar" class="btn btn-primary">
+                        <span><strong>Enviar</strong></span>
+                    </button>
+                </form>
             </div>
         </div>
     </body>
