--- a/html/sucursales.html
+++ b/html/sucursales.html
@@ -140,7 +140,7 @@
                 <a href="https://www.facebook.com" target=”_blank”><i class="fa-brands fa-facebook fa-2x"></i></a>
                 <a href="https://web.whatsapp.com" target=”_blank”><i class="fa-brands fa-whatsapp fa-2x"></i></a>
 
-            </div>RefugioAnimal
+            </div>
 
             <p>Marca no registrada ®</p>
 
